feat: start convert NIOIntro to modules