@@ -8,8 +8,6 @@
   <property file="../gformat.properties" />
   <property file="../pmd.properties" />
   <property file="../spotbugs.properties" />
-  <!-- Sets variables which can later be used. -->
-  <!-- The value of a property is accessed via ${} -->
   <property name="src.dir"
             location="." />
   <property name="build.dir"
@@ -33,7 +31,6 @@
            classpath="${pmd.cp}" />
   <taskdef resource="edu/umd/cs/findbugs/anttask/tasks.properties"
            classpath="${spotbugs.cp}:${spotbugs-plugins.cp}" />
-  <!-- Deletes the existing build, docs and dist directory-->
   <target name="clean">
     <delete>
       <fileset dir="."
@@ -42,26 +39,26 @@
     <delete dir="${docs.dir}" />
     <delete dir="${dist.dir}" />
   </target>
-  <!-- Creates the  build, docs and dist directory-->
   <target name="makedir">
     <mkdir dir="${docs.dir}" />
     <mkdir dir="${dist.dir}" />
   </target>
-  <!-- Compiles the java code (including the usage of library for JUnit -->
   <target name="compile"
           depends="clean, makedir,format,checkstyle">
     <javac includeantruntime="false"
-           srcdir="${src.dir}"
-           destdir="${build.dir}">
+           modulesourcepath="${src.dir}"
+           destdir="${build.dir}"
+           createMissingPackageInfoClass="false">
       <compilerarg value="${javac.params}" />
       <compilerarg value="${javac.params1}" />
+      <compilerarg value="--module" />
+      <compilerarg value="${module}" />
     </javac>
   </target>
-  <!-- Creates Javadoc -->
   <target name="docs"
           depends="compile">
     <javadoc packagenames="${packages}"
-             sourcepath="${src.dir}"
+             sourcepath="${src.dir}/${module}"
              destdir="${docs.dir}"
              additionalparam="${javadoc.params}"></javadoc>
   </target>
@@ -89,6 +86,8 @@
                    value="${build} ${TODAY}" />
         <attribute name="Implementation-Vendor"
                    value="" />
+        <attribute name="Multi-Release"
+                   value="${multi.release}" />
       </section>
       <attribute name="Main-Class"
                  value="${main.class}" />
@@ -99,18 +98,22 @@
           depends="compile,manifest">
     <jar manifest="${jar.manifest}"
          destfile="${dist.dir}\${ant.project.name}-${version}.jar"
-         basedir="${build.dir}"
+         basedir="${build.dir}/${module}"
          includes="**/*.class"></jar>
   </target>
   <target name="run">
     <description>Run target</description>
     <exec executable="./setup">
       <java classname="${main.class}">
-        <classpath>
+        <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
+        <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
+        <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED" />
+        <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED" />
+        <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" />
+        <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
+        <modulepath>
           <pathelement location="${dist.dir}\${ant.project.name}-${version}.jar" />
-          <pathelement path="${java.class.path}" />
-          <pathelement path="${basedir}" />
-        </classpath>
+        </modulepath>
       </java>
       <java classname="${main.class1}">
         <classpath>
@@ -163,6 +166,12 @@
               srcFile="../${gformat.classpath.file}" />
     <java classname="${gformat.main.class}"
           fork="true">
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
       <arg line="-i ${sources}" />
       <classpath>
         <pathelement path="${gformat.cp}" />
@@ -188,6 +197,12 @@
               srcFile="../${cs.classpath.file}" />
     <java classname="${cs.main.class}"
           logError="true">
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
       <arg line="-c ../${cs.config} -p ${cs.properties} -o ${ant.project.name}-xpath.xml -g ${sources}" />
       <classpath>
         <pathelement path="${cs.cp}" />
@@ -202,7 +217,7 @@
     </first>
     <checkstyle config="${toString:checkstylefile}"
                 failOnViolation="false"
-                properties="${cs.properties}">
+                properties="../${cs.properties}">
       <fileset dir="${src.dir}"
                includes="**/*.java" />
       <formatter type="plain" />
@@ -230,8 +245,7 @@
                  toConsole="${pmd.toConsole}">
         <fileset dir="${basedir}">
           <include name="**/*.java" />
-        </fileset>
-      </formatter>
+        </fileset></formatter>
       <fileset dir="${basedir}">
         <include name="**/*.java" />
       </fileset>
@@ -255,8 +269,20 @@
       </classpath>
     </spotbugs>
   </target>
+  <target name="jlink"
+          depends="jar">
+    <jmod destfile="${jmod.name}"
+          classpath="${dist.dir}\${ant.project.name}-${version}.jar" />
+    <link destDir="build/image"
+          modulepath="${jmod.name}"
+          modules="${module}">
+      <launcher name="${launcher.name}"
+                module="${module}"
+                mainClass="${main.class}" />
+    </link>
+  </target>
   <target name="main"
-          depends="compile,pmd,spotbugs, jar, docs">
+          depends="compile,pmd,spotbugs, jar, docs, jlink">
     <description>Main target</description>
   </target>
 </project>
